# gpgmeqt

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  NEWS  README  autogen.rc  configure.ac
build-aux/: git-log-footer
cmake/modules/: ECMAddTests.cmake  ECMGenerateHeaders.cmake  ECMMarkAsTest.cmake  ECMMarkNonGuiExecutable.cmake  ECMSetupVersion.cmake  ECMUninstallTarget.cmake  FindGpgme.cmake  FindLibGpgError.cmake  G10AddDistTargets.cmake  G10AddGenChangeLogTarget.cmake  G10AddReleaseTargets.cmake  G10CMakeSettings.cmake  G10CompilerSettings.cmake  G10GetFullVersion.cmake  G10GitHooks.cmake  ecm_uninstall.cmake.in  g10_dist.sh.in  g10_distcheck.sh.in  g10_generate_ChangeLog.cmake.in  g10_generate_swdb.sh.in  g10_release.sh.in  g10_sign-release.sh.in
doc/: CMakeLists.txt  DCO  HACKING  Makefile.am
src/: CMakeLists.txt  Makefile.am  QGpgmeConfig-msvc.cmake.in.in  QGpgmeConfig-w32.cmake.in.in  QGpgmeConfig.cmake.in  QGpgmeConfig.cmake.in.in  QGpgmeQt6Config-msvc.cmake.in.in  QGpgmeQt6Config-w32.cmake.in.in  QGpgmeQt6Config.cmake.in.in  abstractimportjob.cpp  abstractimportjob.h  abstractimportjob_p.h  addexistingsubkeyjob.cpp  addexistingsubkeyjob.h  adduseridjob.cpp  adqueryjob.cpp  adqueryjob.h  adqueryjob_p.h  adqueryresult.cpp  adqueryresult.h  changeexpiryjob.cpp  changeexpiryjob.h  changeexpiryjob_p.h  changeownertrustjob.cpp  changepasswdjob.cpp  cleaner.cpp  dataprovider.cpp  dataprovider.h  decryptjob.cpp  decryptverifyarchivejob.cpp  decryptverifyarchivejob.h  decryptverifyarchivejob_p.h  decryptverifyjob.cpp  decryptverifyjob.h  decryptverifyjob_p.h  defaultkeygenerationjob.cpp  deletejob.cpp  deletejob.h  deletejob_p.h  dn.cpp  (+137 more)
tests/: CMakeLists.txt  Makefile.am  fixture.qrc  run-adqueryjob.cpp  run-exportjob.cpp  t-dn.cpp  t-support.cpp  t-support.h  t-util.cpp
tests/fixture/: gpg-agent.conf  gpg.conf
